panko-compiletest/src/snapshots/panko_compiletest__layout-panko__tests__cases__test_error_invalid_operand_for_binary_operator.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/test_error_invalid_operand_for_binary_operator.c
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: invalid operands to binary operator `+`
   ╭─[panko/tests/cases/test_error_invalid_operand_for_binary_operator.c:4:9]
   │
 4 │     f() + 42;
   │     ─┬─ ─ ─┬  
   │      │     ╰── this is of type `int`
   │      │        
   │      ╰──────── this is of type `void`
───╯

Error: comparison of pointers to incompatible types
   ╭─[panko/tests/cases/test_error_invalid_operand_for_binary_operator.c:8:8]
   │
 8 │     &x == &c;
   │     ─┬ ─┬ ─┬  
   │      │  │  ╰── this is of type `ptr<char>`
   │      │  │     
   │      │  ╰───── pointer comparisons are only allowed between pointers to compatible types
   │      │        
   │      ╰──────── this is of type `ptr<int>`
───╯
